# Assistants

./: .air.toml  .eslintrc.cjs  .gitignore  .goreleaser.yml  Makefile  README.md  Taskfile.yml  go.mod  go.sum  go.work  go.work.sum  main.go  main.py  makefile  package.json  pnpm-lock.yaml  pyproject.toml  tool.go  vite.config.ts
apps/cd/: README.md  go.mod  main.go
apps/converter/: README.md  go.mod  go.sum  main.go
apps/protocol/: go.mod  go.sum  main.go
apps/protocol/cmd/: command.go  (+10 more)
apps/searcher/: go.mod
cmd/: command.go  command_module.go  config_module.go  context_module.go  database_module.go  error_chan.go  event_module.go  gui_module.go  protocol_module.go  scheduler_module.go  ui_module.go
component/: entry.go  go.mod  go.sum
context/: config_context.py  tab_context.py  ui_context.py
db/: container.py  tcp_client_repository.py  tcp_connection.py
eventbus/: eventbus.go
fx_module/: event_module.go  go.mod  go.sum
i18n/: i18n.go
internal/component/: button.go
internal/config/: config.go  config_model.go
internal/context/: protocol_context.go
internal/event/: event.go
internal/gui/: main_layout.go  message.go  status_bar.go  window.go
internal/model/: connection.go
internal/protocol/: protocol.go  tcp_client_manager.go  tcp_server.go  udp_server.go
internal/socket/: socket_server.go
internal/ui/: connection_dialog.go  connection_tree.go  content_tab.go  error_dialog.go  hsplit.go  layout.go  message.go  status_bar.go  toolbar.go
model/: tcp_connection_settings.py
net/: tcp_client.py
pkg/: go.mod  port.go
service/: tcp_client.py
socket/: socket_client.py
src/: App.scss  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  support_protocol.rs  tcp_client_commands.rs  util.rs
src/calls/: CreateSession.ts  TestProtocol.ts  index.ts  methods.ts
src/component/: AddSessionModal.tsx  CodeModal.tsx  Content.module.css  Content.tsx  GlobalSpotlight.tsx  HeightLevelSetting.tsx  Layout.tsx  Message.tsx  MessageContent.tsx  MessageProp.ts  Navbar.tsx  ProtocolSessions.tsx  SearchInContent.tsx  SendContent.tsx  WorkspaceTab.tsx
src/i18n/: i18n.ts  index.ts
src/modules/: i18n.ts
src/store/: SessionStore.ts
src/type/: Connection.ts  Protocol.ts
ui/: border_layout.py  connect_dialog.py  container.py  item_wrapper.py  left_content.py  left_section.py  main_frame.py  main_panel.py  message_pane.py  module.py  position.py  size_type.py  ui_module.py  window.py
website/: README.md  pyproject.toml
(+39 files in other folders)
