[tool.poetry]
name = "pa"
version = "0.1.0"
description = ""
authors = ["DaiYuANg <138393979+DaiYuANg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
wxpython = "^4.2.1"
injector = "^0.21.0"
platformdirs = "^4.2.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
nuitka = "^2.0"
black = "^24.1.1"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"