[project]
name = "assistants"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DaiYuANg", email = "DaiYuAng@icloud.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.3.0",
    "pre-commit>=3.6.2",
]
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/assistants"]

[tool.rye.workspace]
members = ["website", "packages/protocol"]
