[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DaiYuANg", email = "138393979+DaiYuANg@users.noreply.github.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "mkdocs>=1.5.3",
]
